Lunar Lander Teamwork/web/css/game.css
body,html {
    height:100%;
    padding:0px;
    margin:0px;
}

* {
    font-family: 'Orbitron', sans-serif;
}
body {
    background: url(../img/space2.jpg) fixed;
    background-repeat:no-repeat;
    -webkit-background-size:cover;
    -moz-background-size:cover;
    -o-background-size:cover;
    background-size:cover;
    background-position:center;
}

.modal h3{
    text-align: center;
    padding: 10px;
}

#modal_End span {
    font-weight: bold;
}

.modal li a {
    font-weight: bold;
    font-size: 1.05em !important;
}

.active a{
    background: whitesmoke !important;
}

#set_scores, #set_players, #set_instructions, #set_about, #set_ranking{
    display: none;
}

#set_configuration button{
    width: 25%;
    padding-top: 7px;
    padding-bottom: 7px;
    margin: 2%;
    margin-top: 30px;
}

#new_configurationContainer label, #load_configurationContainer label {
    margin-top: 25px;
}
#new_configurationContainer select, #load_configurationContainer select{
    margin-top: 5px;
}
#new_configurationContainer {
    display: none;
}

#table_players span {
    font-style: italic;
    font-weight: bold;
    color: green;
}

a {
    text-decoration: none;
}

.d{
    position:absolute;
    height: 10%;
    width:100%;
    bottom:0;
}

#moon {
    height: 100%;
    width: 100%;
}

#rocket{
    text-align:center;
    position:fixed;
    top:10%;
    width:100%;
    height:20%;
    z-index: 1;
}
#rocket img{
    height:100%;
    z-index: 1;
}

/*ControlPanel*/
#cpanel{
    position: absolute;
    top: 7.5%;
    left: 5%;
    height: 85%;
    width: 25%;
    z-index: 2;
}

#liFuel{
    height: 75%;
    width: 75px;
}

#liFuel div {
    position: relative;
    height: 100%;
    width: 100%;
}

#liFuel img {
    position: absolute;
    width: 90%;
    margin-left: 5%;
    bottom: 10px;
    z-index: 1;
}

#fuelContainer {
    height: 100%;
    overflow: hidden;
    border-bottom: solid white 1px;
    border-radius: 35px 35px 5px 5px;
}

#fuelContent {
    background-image: -ms-linear-gradient(bottom, #1EBA28 0%, #B3CA1A 50%, #ED8F24 75%, #C40000 100%);
    background-image: -moz-linear-gradient(bottom, #1EBA28 0%, #B3CA1A 50%, #ED8F24 75%, #C40000 100%);
    background-image: -o-linear-gradient(bottom, #1EBA28 0%, #B3CA1A 50%, #ED8F24 75%, #C40000 100%);
    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #1EBA28), color-stop(50, #B3CA1A), color-stop(75, #ED8F24), color-stop(100, #C40000));
    background-image: -webkit-linear-gradient(bottom, #1EBA28 0%, #B3CA1A 50%, #ED8F24 75%, #C40000 100%);
    position: absolute;
    width: 100%;
    height: 100%;
    border: white solid 1px;
    border-radius: 35px 35px 5px 5px;
}

#cpanel li:not(#liFuel) {
    position: relative;
    background-color: rgba(38, 66, 144, 0.7);
    margin-top: 2vh;
    width: 100%;
    height: 10%;
    border: solid white 1px;
    border-radius: 5px 25px 25px 5px;
}

#cpanel li:not(#liFuel) img {
    position: absolute;
    height: 75%;
    top: 12.5%;
    left: 18px;
}


#cpanel li:not(#liFuel) div{
    display: table;
    position: absolute;
    width: 100%;
    height: 100%;
}

#cpanel li p {
    color: white;
    font-weight: bold;
    font-size: 1.7vw;
    padding-left: 20%;
    display: table-cell;
    vertical-align: middle;
}


#hidem,#showm{
    display:none
}

ul:not(.inst){
    list-style: none;
    padding: 0px;
    margin: 0px;
    overflow: hidden;
}

#set_instructions span {
    font-weight: bold;
}

#menu {
    position: absolute;
    right: 0;
    top: 0;
    z-index: 3;
}

#menu li {
    float: right;
    width: 6vw;
    margin: 10px;
    height: 15%;
}

#menu li img {
    width: 100%;
    -webkit-transition: -webkit-transform .8s ease-in-out;
    transition:         transform .8s ease-in-out;
}
#menu li img:hover{
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
}

.paused {
    display: none;
}

#set_about, #set_configuration, #set_instructions, #set_players, #set_ranking, #set_scores {
    padding-left: 25px;
    padding-right: 25px;
    line-height: 150%;
}

#divGamePaused {
    z-index: 2;
    background-color:rgba(150, 64, 12, 0.65);
    position: absolute;
    width: 100%;
    height: 100%; 
    display: none;
}

#containerGamePaused {
    width: 100%;
    height: 100%;
    text-align:center; 
    display: table;
}

#divGamePaused h1 {
    color: white;
    font-size: 8vw;
    display:table-cell;
    vertical-align:middle
}
/************************************************
VERTICAL
*************************************************/
@media screen and (max-width: 767.5px){
    #menu {
        height: 100%;
    }
    #menu li {
        float: none;
        margin: 15px;
        padding: 0;
        width: 75px;
    }
    #menu li img:hover{
        transform: scale(1.1);
    }

    #divGamePaused h1 {
        color: white;
        font-size: 8vw;
        display:table-cell;
        vertical-align:middle
    }

    #cpanel li:not(#liFuel) img {
        position: absolute;
        height: 75%;
        top: 12.5%;
        opacity: 0.3;

    }

    #cpanel li p {
        color: white;
        font-weight: bold;
        font-size: 3.5vw;
        padding-left:0;
        display: table-cell;
        vertical-align: middle;
    }

    .butonsConfig button{
        font-size: 3.5vw;
        width: 28% !important;
    }
    
    .butonsSaveConfig button{
        font-size: 3.7vw;
        width: 33% !important;
    }
}

